--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <img src="abp.jpg" alt="">
                 <h3>ABP news</h3>
 
-                <a href="#news" class="btn">go live</a>
+                <a href="https://youtu.be/nyd-xznCpJc" class="btn">go live</a>
             </div>
 
             <div class="box">
