--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <img src="ndtv.jpg" alt="">
                 <h3>NDTV </h3>
 
-                <a href="#news" class="btn"> go live</a>
+                <a href="https://youtu.be/MN8p-Vrn6G0" class="btn"> go live</a>
             </div>
 
             <div class="box">
@@ -109,28 +109,28 @@
                 <img src="indiatv.jpg" alt="">
                 <h3>india TV</h3>
 
-                <a href="#news" class="btn">go live</a>
+                <a href="https://youtu.be/Xmm3Kr5P1Uw" class="btn">go live</a>
             </div>
 
             <div class="box">
                 <img src="ni.jpg" alt="">
                 <h3>news india</h3>
 
-                <a href="#news" class="btn">go live</a>
+                <a href="https://youtu.be/-Z5bDbUGu3I" class="btn">go live</a>
             </div>
 
             <div class="box">
                 <img src="aj.png" alt="">
                 <h3>aaj tak</h3>
 
-                <a href="#news" class="btn">go live</a>
+                <a href="https://youtu.be/Cy_6-_XUW-c" class="btn">go live</a>
             </div>
 
             <div class="box">
                 <img src="allindia.jpg" alt="">
                 <h3>all india</h3>
 
-                <a href="#news" class="btn">go live</a>
+                <a href="https://youtu.be/pXTvorHxThQ" class="btn">go live</a>
             </div>
 
         </div>
