--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="content">
                     <h3>football</h3>
-                    <div><a href="football.mp4" class="btn">go live</a></div>
+                    <div><a href="https://youtu.be/Up3Wvsxh6Pg" class="btn">go live</a></div>
                 </div>
             </div>
 
