--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
 
         <div class="content">
             <h3>the benefits of reading news online</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat labore, sint cupiditate distinctio
-                tempora reiciendis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta obcaecati, debitis
-                dicta quam vel Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, minima voluptas quidem
-                molestiae soluta nulla labore sequi excepturi esse repudiandae! </p>
+            <p> A Newspaper is a piece of material which provides knowledge of all the latest news and events happening
+                in the world. Since its origin in 17th century, the newspaper has become an essential part of our daily
+                life.
+                Reading newspaper is a very useful activity to start your day. This gives us a brief knowledge into the
+                real happenings in the country & around the world. For both children & adults, there are many useful
+                columns like Political News, Tech News, editorials, puzzle game, etc.</p>
             <a href="" class="btn">read more news</a>
         </div>
 
@@ -73,11 +75,13 @@
 
             <div class="content">
                 <h3>advantage of reading news online?</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus qui ea ullam, enim tempora
-                    ipsum fuga alias quae ratione a officiis id temporibus autem? Quod nemo facilis cupiditate. Ex, vel?
+                <p>In the present scenario, the environmental issue matters a lot. Reading news online is a good step
+                    towards saving the environment. Hard copies contain paper, chemical inks that can harm our
+                    environment.
                 </p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit amet enim quod veritatis, nihil
-                    voluptas culpa! Neque consectetur obcaecati sapiente?</p>
+                <p>To use paper, millions of trees are cut in one stroke and the same ink containing chemicals on the
+                    paper, which is found in the environment, contaminates it. Instead of reading news from magazines or
+                    newspapers, we can read it online, where no paper or chemical-use ink is required. </p>
                 <a href="#" class="btn">learn more</a>
             </div>
 
