--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <p>To use paper, millions of trees are cut in one stroke and the same ink containing chemicals on the
                     paper, which is found in the environment, contaminates it. Instead of reading news from magazines or
                     newspapers, we can read it online, where no paper or chemical-use ink is required. </p>
-                <a href="#" class="btn">learn more</a>
+                <a href="https://en.wikipedia.org/wiki/Online_newspaper" class="btn">learn more</a>
             </div>
 
         </div>
@@ -189,30 +189,24 @@
 
             <div class="box">
                 <img src="health1.png" alt="" class="queta">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi
-                    nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus
-                    vel? Nemo.</p>
-                <div><a href="#health" class="btn">read more</a></div>
+                <p>The word health refers to a state of complete emotional and physical well-being. Healthcare exists to help people maintain this optimal state of health. </p>
+                <div><a href="https://www.who.int/about/governance/constitution" class="btn">read more</a></div>
 
             </div>
 
             <div class="box">
                 <img src="health4.jpg" alt="" class="quote">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi
-                    nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus
-                    vel? Nemo.</p>
+                <p> Meditation is a practice where an individual uses a technique – such as mindfulness, or focusing the mind on a particular object, thought, or activity – to train attention and awareness, and achieve a mentally clear and emotionally calm and stable state</p>
 
-                <div><a href="#health" class="btn">read more</a></div>
+                <div><a href="https://en.wikipedia.org/wiki/Meditation" class="btn">read more</a></div>
 
             </div>
 
             <div class="box">
                 <img src="health5.jpg" alt="" class="quote">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi
-                    nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus
-                    vel? Nemo.</p>
+                <p> Exercise involves engaging in physical activity and increasing the heart rate beyond resting levels. It is an important part of preserving physical and mental health.</p>
 
-                <Div><a href="#health" class="btn">read more</a></Div>
+                <Div><a href="https://en.wikipedia.org/wiki/Exercise" class="btn">read more</a></Div>
 
             </div>
 
